# login-instangram

./: .env  .env.example  .gitignore  DEPLOYMENT.md  MIGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py
app/forms/: postForm.py  resetUserForm.py  signUpForm.py
app/models/: __init__.py  comments.py  follows.py  likes.py  messages.py  notifications.py  posts.py  saved_posts.py  stories.py
app/routes/: auth_bp.py  main_bp.py
app/static/: instagram-style.css
app/templates/: base.html  create_post.html  explore.html  feed.html  home.html  index.html  notifications.html  post_detail.html  profile.html  search.html  signup.html  user_profile.html
app/templates/auth/: login.html  reset.html
instance/: site.db
migrations/versions/: ba11af34067b_first_migration.py
